--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header">
-            <H1>Введите свои данные</H1>
+            <H1>Введите свою дату рождения</H1>
     </div>
 <div class="body">
     <div class="content">
